--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/notesCollector.svg" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <!--
